--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="layer"></div>
             <section id="intro">
                 <section id="intro_text">
-                    <h1><u>THE</u> Full Stack Developer</h1>
+                    <h1><u>Matt Kelly</u> <br> Software Engineer</h1>
                 </section>
             </section>
         </div>
@@ -65,22 +65,20 @@
                 <h1>About Me</h1>
             </div>
             <p id="bio_text">
-                <strong>Matt Kelly</strong> is a Business Operations Lead at Park Place Technologies, LLC. He is an
-                experienced leader, creative thinker, and logical egghead. He attended the University of Illinois at
+                <strong>Matt Kelly</strong> is Software Engineer at Segmint Inc. He is an
+                experienced leader, creative thinker, and problem solver. He attended the University of Illinois at
                 Chicago (UIC), receiving his bachelors in Strategic Management, during which time he joined the
-                military, serving 6 years in the Army Reserves as a Human Resource Sergeant. The highlight of his
-                military career was working at the reservist Head Quarters in Arlington Heights, Illinois where he lead
-                a team of 4-5 specialists in accomplishing administrative and HR tasks while working directly with
-                One-Star Generals.
+                military, serving 6 years in the Army Reserves as a Human Resource Sergeant. 
                 <br><br>After graduating from UIC, Matt moved out to Cleveland where he started his career as a
-                Contracts Administrator at Park Place Tech. After only a year, he worked his way up to Business
-                Operations Leadership - overseeing a team of 16 individuals, responsible for training, and being the
-                liaison between our Legal and Financial departments for our customers and sales staff.
-                <br><br>In August of 2019, this hard-working twenty-six-year-old decided to further push himself,
+                Business Operations Specialist at Park Place Technologies, LLC. After only a year, he worked his way up to Business
+                Operations Team Lead - overseeing a team of 16 individuals. He oversaw training, daily operations, and was the
+                liaison between the Legal and Financial and Sales departments.
+                <br><br>In August of 2019 he decided to further push himself,
                 dedicating his remaining time towards self-improvement by attending Case Western Reserve University's
-                Coding Bootcamp where he learned Full Stack Development.
-                <br><br>His coding experience includes HTML5, CSS3, JavaScript, jQuery, Bootstrap, Express.js, React.js,
-                Java, Node.js, Database Theory, Bookshelf.js, MongoDB, MySQL, Command Line, Git, and more.
+                Coding Bootcamp where he learned Full Stack Development. It only took Matt two weeks after graduation to get 
+                hired as a Software Engineer at Segmint.
+                <br><br>His coding experience includes HTML5, CSS3, JavaScript, Typescript, jQuery, Bootstrap, Express.js, React.js, 
+                AngularJS, Angular, Java, Node.js, Database Theory, MongoDB, MySQL, Postgres, Docker, Kafka, Springboot, Bash Scripting, Git, and more.
                 <br><br>Outside of work, Matt is a coding hobbyist, reads books, and plays video games, but most
                 importantly, Matt loves spending time with his wife and two dogs. The most important thing to him is
                 supporting his small family, which is why he is so dedicated to maintaining the highest quality of work
@@ -91,11 +89,28 @@
         <!-- Experience Section -->
         <section id="experience" style="background-image: url('./assets/images/stripes-light.png')">
             <div class="section_banner">
-                <h1>Experience</h1>
+                <h1>Work Experience</h1>
             </div>
 
             <div class="container">
                 <div class="row">
+                    <div class="col-md-4 d-flex align-items-stretch">
+                        <div class="card" style="width: 22rem;">
+                            <img src="./assets/images/segmint.png" class="card-img-top" alt="U.S. Army Logo">
+                            <div class="card-body">
+                                <h5 class="card-title">Software Engineer</h5>
+                                <hr>
+                                <div class="card-text">
+                                    <ul>
+                                        <li> Working with cutting edge tech to build highly scalable APIs with a mircoservice. </li>
+                                        <li> Implement new features, business requirements, maintain code base, unit tests for a front Javascript application and backend RESTful services. </li>
+                                        <li> Developes and maintains a single page application that functions as Segmint's marketing automation platform. </li>
+                                        <li> Works with Client Services, and customers to help resolve production issues. </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-md-4 d-flex align-items-stretch">
                         <div class="card" style="width: 22rem;">
                             <img src="./assets/images/army.png" class="card-img-top" alt="U.S. Army Logo">
@@ -134,7 +149,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 d-flex align-items-stretch">
+                    <!-- <div class="col-md-4 d-flex align-items-stretch">
                         <div class="card" style="width: 22rem;">
                             <img src="./assets/images/morningstar.png" class="card-img-top morningstar"
                                 alt="Morningstar Logo">
@@ -151,7 +166,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -258,6 +273,18 @@
             <div class="section_banner">
                 <h1>Education</h1>
             </div>
+            <img src="./assets/images/case.png" style="border-radius: 50%;" alt="UIC Logo">
+            <h3><b>Full Stack Web Development - Aug 2019 to Feb 2020</b></h3>
+            <h4><i>Case Western Reserve University</i></h4>
+            <ul>
+                <li>Graduated in top of class</li>
+                <li>Cumulative GPA: 4.0/4.0</li>
+                <li>Topics Covered:</li>
+                <ul>
+                    <li>HTML5, CSS3, JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, Database Theory, 
+                        MongoDB, MySQL, Command Line, Java, and Git.</li>
+                </ul>
+            </ul>
             <img src="./assets/images/uic.png" style="border-radius: 50%;" alt="UIC Logo">
             <h3><b>B.S. In Strategic Management - Aug 2012 to May 2017</b></h3>
             <h4><i>University of Illinois at Chicago</i></h4>
